--- a/index.html
+++ b/index.html
@@ -2,47 +2,47 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>My Personal GitHub Webpage</title>
+        <title>A bit about me</title>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
     </head>
     <body>
         <article>
-        <h1>&#128075; Hi! I'm Wout</h1>
+        <h1>&#128075; Hi! Welcome to my Github page: How not to be smart...</h1>
         <p>
-            Welcome to my GitHub account. 
+            ...and prepare to be the opposite of dazzled. My name is Lovisa
+               and I'm here to show you what not to do. 
         </p>
         </article>
         <article>
         <h2>&#128587; About Me</h2>
         <ul>
-            <li>I am originally from Belgium</li>
-            <li>I speak Dutch, English, French, and a little bit of Italian, German, and Swedish.</li>
-            <li>I am currently teaching students how to use GitHub because it's a very useful skill!<li>
-            <li>I like to go on hikes.</li>
+            <li>I am Swedish, born in Skania</li>
+            <li>I speak Swedish, English, and I avoid to pretend to speak French and Spanish</li>
+            <li>I am currently learning how to use GitHub because sounding smart is the second best option to being smart.</li>
+            <li>I'm an author, a librarian and an advocate for people with mental health issues.</li>
         </ul>
         </article>
         <article>
         <h2>&#127979; About My Studies </h2>
         <ul>
-            <li>I am teaching LIS at the University of Borås</li>
+            <li>I am studying [...] at [...]</li>
             <li>I can code in:
                 <ul>
-                    <li><code>XML</code></li>
-                    <li><code>python</code></li>
+                    <li><code>[...]</code></li>
+                    <li><code>[...]</code></li>
                 </ul>
             </li>
         </ul>
         </article>
         <article>
-        <h2>&#129367; About Salad</h2>
+        <h2>&#127829; About Cake (it is not a lie)</h2>
         <ul>
-            <li>My favourite salad is caesar</li>
+            <li>My favourite cake is Summer Cake</li>
             <li>Its toppings include:
                 <ul>
-                    <li>romain salad</li>
-                    <li>parmesan cheese</li>
-                    <li>cherry tomatoes</li>
-                    <li>caesar salad dressing</li>
+                    <li>Strawberries</li>
+                    <li>Cream</li>
+                    <li>Chocolate</li>
                 </ul>
             </li>
         </ul>
