--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <article>
         <h2>&#127979; About My Studies </h2>
         <ul>
-            <li>I am studying [...] at [...]</li>
+            <li>I am studying Information Science at Borås University</li>
             <li>I can code in:
                 <ul>
-                    <li><code>[...]</code></li>
-                    <li><code>[...]</code></li>
+                    <li><code>HTML</code></li>
+                    <li><code>CSS</code></li>
                 </ul>
             </li>
         </ul>
